Created all the search options

--- a/frontend/landing-page/index.html
+++ b/frontend/landing-page/index.html
@@ -15,7 +15,7 @@
 
     <div class="freerooms-navbar-container">
       <button class="navbar-icon-container">
-        <img width="30px" height="30px" src="../assets/searchIcon.png">
+        <img width="30px" height="30px" src="../assets/searchIconOrange.png">
       </button>
 
       <button class="navbar-icon-container">
@@ -33,6 +33,24 @@
   </div>
 
   <div class="body">
+    <div class="search-header">
+      <button class="filters-container">
+        <img width="30px" height="30px" src="../assets/filter.png" alt="filter-icon">
+        Filter
+      </button>
+
+      <div class="search-bar">
+        <!-- <button class="search-icon"></button> -->
+        <!-- <div class="search-input"></div> -->
+        <img width="30px" height="30px" src="../assets/searchIconBlack.png" alt="search-icon" class="search-bar-icon">
+        <input type="text" class="search-input" placeholder="Search for a building...">
+      </div>
+
+      <button class="sort-container">
+        <img width="30px" height="30px" src="../assets/sortIcon.png" alt="sort-icon">
+        Sort
+      </button>
+    </div>
   </div>
 
   <div class="footer"></div>
