Created the template that the buildings can live in

--- a/frontend/landing-page/index.html
+++ b/frontend/landing-page/index.html
@@ -40,8 +40,6 @@
       </button>
 
       <div class="search-bar">
-        <!-- <button class="search-icon"></button> -->
-        <!-- <div class="search-input"></div> -->
         <img width="30px" height="30px" src="../assets/searchIconBlack.png" alt="search-icon" class="search-bar-icon">
         <input type="text" class="search-input" placeholder="Search for a building...">
       </div>
@@ -50,6 +48,17 @@
         <img width="30px" height="30px" src="../assets/sortIcon.png" alt="sort-icon">
         Sort
       </button>
+    </div>
+
+    <div class="main-body">
+      <div class="building-container">
+        <img src="../assets/agsm.webp" alt="AGSM image">
+        <div class="overlay rooms-avaliable">
+          <span class="avaliable-icon"></span>
+          9 rooms avaliable
+        </div>
+        <div class="overlay building-name">AGSM</div>
+      </div>
     </div>
   </div>
 
