Finished the main body of frontend

--- a/frontend/landing-page/index.html
+++ b/frontend/landing-page/index.html
@@ -59,6 +59,87 @@
         </div>
         <div class="overlay building-name">AGSM</div>
       </div>
+
+      <div class="building-container">
+        <img src="../assets/ainsworth.webp" alt="Ainsworth image">
+        <div class="overlay rooms-avaliable">
+          <span class="avaliable-icon"></span>
+          16 rooms avaliable
+        </div>
+        <div class="overlay building-name">Ainsworth Building</div>
+      </div>
+
+      <div class="building-container">
+        <img src="../assets/anitab.webp" alt="Antila B. Lawrence Centre">
+        <div class="overlay rooms-avaliable">
+          <span class="avaliable-icon"></span>
+          44 rooms avaliable
+        </div>
+        <div class="overlay building-name">Antila B. Lawrence Centre</div>
+      </div>
+
+      <div class="building-container">
+        <img src="../assets/biologicalScience.webp" alt="Biological Sciences">
+        <div class="overlay rooms-avaliable">
+          <span class="avaliable-icon"></span>
+          6 rooms avaliable
+        </div>
+        <div class="overlay building-name">Biological Sciences</div>
+      </div>
+
+      <div class="building-container">
+        <img src="../assets/biologicalScienceWest.webp" alt="Biological Sciences (West)">
+        <div class="overlay rooms-avaliable">
+          <span class="avaliable-icon"></span>
+          8 rooms avaliable
+        </div>
+        <div class="overlay building-name">Biological Sciences (West)</div>
+      </div>
+
+      <div class="building-container">
+        <img src="../assets/blockhouse.webp" alt="Blockhouse">
+        <div class="overlay rooms-avaliable">
+          <span class="avaliable-icon"></span>
+          42 rooms avaliable
+        </div>
+        <div class="overlay building-name">Blockhouse</div>
+      </div>
+
+      <div class="building-container">
+        <img src="../assets/businessSchool.webp" alt="Business School">
+        <div class="overlay rooms-avaliable">
+          <span class="avaliable-icon"></span>
+          18 rooms avaliable
+        </div>
+        <div class="overlay building-name">Business School</div>
+      </div>
+
+      <div class="building-container">
+        <img src="../assets/civilBuilding.webp" alt="Civil Engineering Building">
+        <div class="overlay rooms-avaliable">
+          <span class="avaliable-icon"></span>
+          8 rooms avaliable
+        </div>
+        <div class="overlay building-name">Civil Engineering Building</div>
+      </div>
+
+      <div class="building-container">
+        <img src="../assets/colombo.webp" alt="Colombo Building">
+        <div class="overlay rooms-avaliable">
+          <span class="avaliable-icon"></span>
+          5 rooms avaliable
+        </div>
+        <div class="overlay building-name">Colombo Building</div>
+      </div>
+
+      <div class="building-container">
+        <img src="../assets/cseBuilding.webp" alt="Computer Science & End (K17)">
+        <div class="overlay rooms-avaliable">
+          <span class="avaliable-icon"></span>
+          7 rooms avaliable
+        </div>
+        <div class="overlay building-name">Computer Science & End (K17)</div>
+      </div>
     </div>
   </div>
 
