Added functionality so that door can open or close when clicked

--- a/frontend/landing-page/index.html
+++ b/frontend/landing-page/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
   <div class="header">
-    <div class="freerooms-logo-container">
-      <img width="50px" height="50px" style="color:transparent" src="../assets/openDoor.png" alt="freerooms logo">
+    <div id="freerooms-logo-container">
+      <img id="door-logo" width="50px" height="50px" src="../assets/freeRoomsLogo.png" alt="freerooms logo">
       Freerooms
     </div>
 
@@ -143,6 +143,6 @@
     </div>
   </div>
 
-  <!-- <div class="footer"></div> -->
+  <script src="backend.js"></script>
 </body>
 </html>
